--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ python = "^3.11"
 fastapi = "^0.95.2"
 uvicorn = {extras = ["standard"], version = "^0.22.0"}
 black = "^23.3.0"
+pytest = "^7.3.1"
+httpx = "^0.24.1"
 
 
 [build-system]
